<resources>
    <string name="name_chat">ChatActivity</string>
    <string name="name_auth_ui">Auth UI demo</string>
    <string name="name_image">Storage Image Demo</string>
    <string name="desc_chat">Demonstrates using a FirebaseRecyclerAdapter to load data from Firebase Database into a RecyclerView for a basic chat app.</string>
    <string name="desc_auth_ui">Demonstrates the Firebase Auth UI flow, with customization options.</string>
    <string name="desc_image">Demonstrates displaying an image from Cloud Storage using Glide.</string>
    <!-- strings for Auth UI demo activities -->
    <eat-comment/>
    <string name="launch_title">DeZee</string>
    <string name="sign_in">Start</string>
    <string name="green_theme">Green Theme</string>
    <string name="purple_theme">Purple Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="use_theme_header">Use theme:</string>
    <string name="logo_header">Logo:</string>
    <string name="firebase_logo_label">Firebase Auth</string>
    <string name="google_logo_label">Google</string>
    <string name="no_logo_label">None</string>
    <string name="auth_providers_header">Use auth providers:</string>
    <string name="email_label">Email</string>
    <string name="facebook_label">Facebook</string>
    <string name="facebook_label_missing_config">Facebook - configuration missing</string>
    <string name="google_label">Google</string>
    <string name="google_label_missing_config">Google - configuration missing</string>
    <string name="unknown_response">Unexpected onActivityResult response code</string>
    <string name="unknown_sign_in_response">Unknown response from AuthUI sign-in</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="signed_in_header">You are signed in!</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_out_failed">Sign out failed</string>
    <string name="user_profile_header">User profile:</string>
    <string name="profile_picture_content_desc">Profile picture</string>
    <string name="default_theme">Default theme</string>
    <string name="rational_image_perm">This sample will read an image from local storage to upload to Cloud Storage.</string>
    <string name="anonymous_auth_failed_msg">Anonymous authentication failed, various components of the demo will not work. Make sure your device is online and that Anonymous Auth is configured in your Firebase project(https://console.firebase.google.com/project/_/authentication/providers)</string>
    <string name="unknown_error">An unknown error occurred</string>
    <string name="app_name">DeZee</string>
    <string name="facebook_application_id" translatable="false">349372675464328</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb349372675464328</string>
    <string name="Button1">Button1</string>
    <string name="Button2">Button2</string>
    <string name="Button3">Button3</string>
    <string name="upvote_count">0</string>
    <string name="post_date">03/17/2017</string>
    <string name="post_title">This is just an example title.</string>
    <string name="action_settings">ahh</string>
    <string-array name="filters">
        <item>Hot</item>
        <item>New</item>
        <item>Top</item>
    </string-array>
    <string name="post_content">This is where the post content would go..*IMart from the Illini is total legend. Had won back-to-back national titles.</string>
    <string name="settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_post">Post</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Longitude">Longitude</string>
    <string name="Latitude">Latitude</string>
    <string name="continue_button">Continue</string>
    <string name="logout">Logout</string>
    <string name="options">Options</string>
    <string name="title_location_permission">Location Permission</string>
    <string name="text_location_permission">Location Permission</string>
    <string name="ok">ok</string>


    <string name="Title">Title</string>
    <string name="Tags">Tags</string>
    <string name="Content">Content</string>
    <string name="SubmitButton">Submit</string>
    <string name="CancelButton">Cancel</string>
    <string name="user_manual">User Manual</string>
</resources>
