<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:enabled="true"
        android:title="@string/menu_home"
        android:showAsAction="withText"
        android:icon="@drawable/home_icon"
        />
    <item
        android:id="@+id/menu_search"
        android:enabled="true"
        android:title="@string/menu_search"
        android:showAsAction="withText"
        android:icon="@drawable/search_icon"
        />
    <item
        android:id="@+id/menu_post"
        android:enabled="true"
        android:title="@string/menu_post"
        android:showAsAction="withText"
        android:icon="@drawable/post_icon"
        />
    <item
        android:id="@+id/menu_notifications"
        android:enabled="true"
        android:title="@string/menu_notifications"
        android:showAsAction="withText"
        android:icon="@drawable/notifications_icon"
        />

    <item
        android:id="@+id/menu_user_manual"
        android:enabled="true"
        android:title="@string/user_manual"
        android:showAsAction="withText"
        android:icon="@mipmap/user_manual_button"
        />
</menu>