<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="145dp"
    android:layout_margin="2dp"
    android:clickable="true"
    android:foreground="?selectableItemBackground"
    android:backgroundTint="#ffffff"
    card_view:cardCornerRadius="7dp"
    card_view:cardElevation="-3dp"
    card_view:contentPadding="0dp"
    >

    <RelativeLayout
        android:id="@+id/thread"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/post_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:paddingTop="10dp"
            android:textColor="#000000"
            android:text="@string/post_date"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/post_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:layout_below="@id/post_date"
            android:textColor="#000000"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/post_title"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/post_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:layout_below="@id/post_title"
            android:layout_toEndOf="@+id/voting_system_panel"
            android:maxLines="4"
            android:ellipsize="end"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:textColor="#000000"
            android:text="@string/post_content"/>

        <include
            layout="@layout/voting_system"
            android:id="@+id/voting_system_panel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/post_title" />

        <TextView
            android:id="@+id/time_ago"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_ago"
            android:textColor="#000000"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/voting_system_panel"/>

    </RelativeLayout>
</android.support.v7.widget.CardView>
